# invoice-extraction-qa-rag

./: README.md  main.py  pyproject.toml  requirements.txt  run_app.py  streamlit_app.py
output/individual_invoices/: invoice_C020692300346813.xlsx  invoice_HYD8-3001153.xlsx
output/master_data/: master_financial_data.xlsx
output/vector_db/chroma/: chroma.sqlite3
src/: __init__.py  config.py
src/core/: __init__.py  document_processor.py  excel_handler.py  rag_pipeline.py  template_mapper.py  vector_store.py
src/prompts/: __init__.py  rag_prompts.py
src/templates/: invoice_schema.json  master_template.json
src/utils/: __init__.py  embeddings.py
